<resources>
    <string name="app_name">Spatial Motion</string>
    <string name="accessibility_service_description">Sends hand-gesture scroll and tap actions to TikTok, Instagram, Facebook, and YouTube while the Spatial Motion bubble is active.</string>
    <string name="notification_channel">Spatial Motion bubble</string>
    <string name="notification_title">Spatial Motion active</string>
    <string name="notification_body">Floating bubble is controlling other apps with hand gestures.</string>
    <string name="bubble_content_desc">Spatial Motion floating bubble</string>
    <string name="bubble_running">Active</string>
    <string name="hand_detected">Hand detected</string>
    <string name="settings_title">Settings</string>
    <string name="settings_subtitle">Open TikTok, IG, FB, or YT and use gestures.</string>
    <string name="gesture_help_short">Open palm hold = next\nClosed fist hold = previous\nThumbs up hold = play / pause</string>
    <string name="stop_bubble">Stop bubble</string>
    <string name="gesture_next">Next</string>
    <string name="gesture_previous">Previous</string>
    <string name="gesture_play_pause">Play / Pause</string>
    <string name="camera_preview_title">Camera</string>
    <string name="camera_preview_hide">Hide camera preview</string>
    <string name="camera_preview_show">Show camera preview</string>
    <string name="camera_preview_minimize">Minimize</string>
    <string name="camera_preview_maximize">Maximize</string>
    <string name="panel_expand">Expand panel</string>
    <string name="panel_collapse">Collapse panel</string>
    <string name="bubble_minimize">Minimize bubble</string>
    <string name="bubble_restore">Restore bubble</string>
    <string name="setting_minimize_on_start">Start with bubble minimized</string>
    <string name="setting_show_skeleton">Show skeleton overlay</string>
    <string name="setting_show_camera">Show camera when bubble starts</string>
    <string name="setting_vibrate">Vibrate on gesture</string>
    <string name="setting_cooldown_label">Gesture cooldown</string>
    <string name="setting_cooldown_value">%.1f seconds between gestures</string>
</resources>
